[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/InitialCutscene.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="InitialCutscene" type="Node2D"]
script = ExtResource( 1 )
list_texts = [ "LoremIpsum" ]

[node name="Background" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 192.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageContainer" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="ImageContainer"]

[node name="TextContainer" type="Node2D" parent="."]
position = Vector2( 41, 113 )

[node name="RichTextLabel" type="RichTextLabel" parent="TextContainer"]
margin_left = -16.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 64.0
visible_characters = 0
percent_visible = 0.1
text = "In Italia "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AskForName" type="Node2D" parent="."]

[node name="LineEdit" type="LineEdit" parent="AskForName"]
anchor_right = 1.0
margin_left = 96.0
margin_top = 116.0
margin_right = 224.0
margin_bottom = 140.0
align = 1
max_length = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AskForGender" type="Control" parent="."]
margin_left = 156.0
margin_right = 156.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="AskForGender"]
margin_left = -60.0
margin_top = 112.0
margin_right = 68.0
margin_bottom = 160.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Man" type="Button" parent="AskForGender/Panel"]
margin_left = 12.0
margin_top = 17.0
margin_right = 59.0
margin_bottom = 35.0
text = "Uomo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Woman" type="Button" parent="AskForGender/Panel"]
margin_left = 69.0
margin_top = 17.0
margin_right = 115.0
margin_bottom = 36.0
action_mode = 0
text = "Donna"
